chore(docs): update style docs for dropdown

--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -18,13 +18,12 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 | `.bx--dropdown`                   | background-color | `$field-01`                  |
 | `.bx--dropdown`                   | border-bottom    | `$ui-04`                     |
 | `.bx--dropdown--light`            | background-color | `$field-02`                  |
-| `.bx--dropdown-list`              | background-color | `$ui-01`                     |
+| `.bx--dropdown-list`              | background-color | `$field-02`                  |
 | `.bx--dropdown-text`              | text color       | `$text-01`                   |
 | `:placeholder`                    | text color       | `$text-03`                   |
-| `.bx--dropdown-item`              | background-color | `$hover-ui`                  |
 | `.bx--dropdown-item`              | text color       | `$text-02`                   |
 | `.bx--dropdown__arrow`            | fill             | `$icon-01`                   |
-| `.bx--list-box__selection--multi` | background-color | `$ui-05`                     |
+| `.bx--list-box__selection--multi` | background-color | `$icon-01`                   |
 | `.bx--dropdown--open`             | box-shadow       | `0 2px 6px 0 rgba(0,0,0,.2)` |
 
 <div className="image--fixed">
@@ -37,16 +36,18 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interactive states
 
-| Class                         | Property         | SCSS           |
-| ----------------------------- | ---------------- | -------------- |
-| `:focus`                      | border           | `$focus`       |
-| `.bx--dropdown-item:hover`    | background-color | `$hover-ui`    |
-| `.bx--dropdown-item:hover`    | text color       | `$text-01`     |
-| `.bx--form-requirement`       | text color       | `$support-01`  |
-| `[data-invalid]`              | border-bottom    | `$support-01`  |
-| `.bx--label:disabled`         | text color       | `$disabled-02` |
-| `.bx--dropdown:disabled`      | background-color | `$disabled-01` |
-| `.bx--dropdown-text:disabled` | text color       | `$disabled-02` |
+| Class                                           | Property         | SCSS              |
+| ----------------------------------------------- | ---------------- | ----------------- |
+| `:focus`                                        | border           | `$focus`          |
+| `.bx--dropdown-item:hover`                      | background-color | `$hover-ui`       |
+| `.bx--dropdown-item:hover`                      | text color       | `$text-01`        |
+| `.bx--dropdown--light .bx--dropdown-item:hover` | background-color | `$hover-light-ui` |
+| `.bx--form-requirement`                         | text color       | `$support-01`     |
+| `[data-invalid]`                                | border-bottom    | `$support-01`     |
+| `[data-invalid]`                                | text-color       | `$text-error`     |
+| `.bx--label:disabled`                           | text color       | `$disabled-02`    |
+| `.bx--dropdown:disabled`                        | background-color | `$disabled-01`    |
+| `.bx--dropdown-text:disabled`                   | text color       | `$disabled-02`    |
 
 **Active:** Placeholder text should remain when the user clicks into the text
 input and gets a cursor. Once the user starts typing, the hint text is replaced
@@ -71,7 +72,7 @@ three words.
 | ----------------------- | ---------- | ------------- | ---------------- |
 | `.bx--dropdown-text`    | 14 / 0.875 | Regular / 400 | `$body-short-01` |
 | `.bx--dropdown-link`    | 14 / 0.875 | Regular / 400 | `$body-short-01` |
-| `.bx--label`            | 14 / 0.875 | Regular / 400 | `$label-01`      |
+| `.bx--label`            | 12 / 0.75  | Regular / 400 | `$label-01`      |
 | `.bx--form-requirement` | 12 / 0.75  | Regular / 400 | `$label-01`      |
 
 ## Structure
@@ -128,7 +129,7 @@ various color differences for closed and open dropdowns.
 | `.bx--list-box.bx--list-box--inline` | height                      | 32 / 2   | -             |
 | `.bx--list-box__menu-item`           | height                      | 40 / 2.5 | -             |
 | `.bx--list-box__menu-item`           | padding-right, padding-left | 16 / 1   | `$spacing-05` |
-| `.bx--checkbox-label`                | padding-left                | 16 / 1   | `$spacing-05` |
+| `.bx--checkbox-label`                | padding-left                | 8 / 0.5  | `$spacing-03` |
 | `.bx--list-box__menu-icon`           | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
