chore(docs): add selected states to table

--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -36,18 +36,20 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interactive states
 
-| Class                                           | Property         | SCSS              |
-| ----------------------------------------------- | ---------------- | ----------------- |
-| `:focus`                                        | border           | `$focus`          |
-| `.bx--dropdown-item:hover`                      | background-color | `$hover-ui`       |
-| `.bx--dropdown-item:hover`                      | text color       | `$text-01`        |
-| `.bx--dropdown--light .bx--dropdown-item:hover` | background-color | `$hover-light-ui` |
-| `.bx--form-requirement`                         | text color       | `$support-01`     |
-| `[data-invalid]`                                | border-bottom    | `$support-01`     |
-| `[data-invalid]`                                | text-color       | `$text-error`     |
-| `.bx--label:disabled`                           | text color       | `$disabled-02`    |
-| `.bx--dropdown:disabled`                        | background-color | `$disabled-01`    |
-| `.bx--dropdown-text:disabled`                   | text color       | `$disabled-02`    |
+| Class                                             | Property         | SCSS                 |
+| ------------------------------------------------- | ---------------- | -------------------- |
+| `:focus`                                          | border           | `$focus`             |
+| `.bx--dropdown-item:hover`                        | background-color | `$hover-ui`          |
+| `.bx--dropdown-item:hover`                        | text color       | `$text-01`           |
+| `.bx--dropdown-item--active`                      | background-color | `$selected-ui`       |
+| `.bx--dropdown--light .bx--dropdown-item:hover`   | background-color | `$hover-light-ui`    |
+| `.bx--dropdown--light .bx--dropdown-item--active` | background-color | `$selected-light-ui` |
+| `.bx--form-requirement`                           | text color       | `$support-01`        |
+| `[data-invalid]`                                  | border-bottom    | `$support-01`        |
+| `[data-invalid]`                                  | text-color       | `$text-error`        |
+| `.bx--label:disabled`                             | text color       | `$disabled-02`       |
+| `.bx--dropdown:disabled`                          | background-color | `$disabled-01`       |
+| `.bx--dropdown-text:disabled`                     | text color       | `$disabled-02`       |
 
 **Active:** Placeholder text should remain when the user clicks into the text
 input and gets a cursor. Once the user starts typing, the hint text is replaced
