Testing gifs and page description

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -1,10 +1,11 @@
 ---
 title: Create flows
 description:
-  To create is to generate a new resource. Creating is distinct from adding, but
-  the two are often confused. To add a resource is to include a resource that
-  already exists. This pattern focuses on how to place the user in a flow when
-  there's a need for creating a new resource.
+  To create is to generate a new resource. Creating is distinct from 
+  adding, but the two are often confused. To add a resource is to 
+  include a resource that already exists. This pattern focuses on how to 
+  place the user in a flow when there's a need for creating a new 
+  resource.
 ---
 
 #### Maintainers:
@@ -275,11 +276,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-<GifPlayer>
-  
 ![Wide tearsheet animated Create flow](/images/WideTearsheetAnimated.gif)
-
-</GifPlayer>
 
 <Caption>Animated illustration of the Create flow in a Wide tearsheet</Caption>
 
@@ -315,12 +312,8 @@ all options for a particular Create flow if it will enhance the user experience.
 
 <Row>
 <Column colLg={8}>
-
-<GifPlayer>
   
 ![Wide tearsheet animated options toggle](/images/WideTearsheetShowAllOptionsAnimated.gif)
-
-</GifPlayer>
 
 <Caption>Animated illustration of the "Show all available options" toggle behavior.</Caption>
 
