Fix gif and page title - take 2

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -14,9 +14,11 @@ description:
 [Andrea Garcia](https://w3.ibm.com/bluepages/profile.html?uid=4G0746897)
 
 <PageDescription>
-  The Create pattern offers simple (single step) and complex (multistep)
-  variations in one of the following formats: Modal, Side panel, Narrow
-  tearsheet, Wide tearsheet, and Full page.
+
+The Create pattern offers simple (single step) and complex (multistep)
+variations in one of the following formats: Modal, Side panel, Narrow
+tearsheet, Wide tearsheet, and Full page.
+
 </PageDescription>
 
 <AnchorLinks>
@@ -313,9 +315,14 @@ all options for a particular Create flow if it will enhance the user experience.
 <Row>
 <Column colLg={8}>
   
-![Wide tearsheet animated options toggle](/images/WideTearsheetShowAllOptionsAnimated.gif)
+<img
+  src="/images/WideTearsheetShowAllOptionsAnimated.gif"
+  alt="Wide tearsheet animated options toggle"
+  title="Wide tearsheet animated options toggle"
+  style="padding:3rem; background-color:#e0e0e0"
+/>
 
-<Caption>Animated illustration of the "Show all available options" toggle behavior.</Caption>
+<Caption>Animated illustration of the "Show all available options" toggle behavior</Caption>
 
 </Column>
 </Row>
