Testing img tags

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -278,10 +278,14 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Wide tearsheet animated Create flow](/images/WideTearsheetAnimated.gif)
+<img
+  src="/images/WideTearsheetAnimated.gif"
+  alt="Wide tearsheet animated Create flow"
+  title="Wide tearsheet animated Create flow"
+  style="padding:3rem; background-color:#e0e0e0"
+></img>
 
-<Caption>Animated illustration of the Create flow in a Wide tearsheet</Caption>
-
+<Caption>Animated illustration of the Create flow in a Wide tearsheet</Caption> 
 </Column>
 </Row>
 
@@ -320,10 +324,9 @@ all options for a particular Create flow if it will enhance the user experience.
   alt="Wide tearsheet animated options toggle"
   title="Wide tearsheet animated options toggle"
   style="padding:3rem; background-color:#e0e0e0"
-/>
+></img>
 
 <Caption>Animated illustration of the "Show all available options" toggle behavior</Caption>
-
 </Column>
 </Row>
 
