--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -1,11 +1,10 @@
 ---
 title: Create flows
 description:
-  To create is to generate a new resource. Creating is distinct from 
-  adding, but the two are often confused. To add a resource is to 
-  include a resource that already exists. This pattern focuses on how to 
-  place the user in a flow when there's a need for creating a new 
-  resource.
+  To create is to generate a new resource. Creating is distinct from adding, but
+  the two are often confused. To add a resource is to include a resource that
+  already exists. This pattern focuses on how to place the user in a flow when
+  there's a need for creating a new resource.
 ---
 
 #### Maintainers:
@@ -16,8 +15,8 @@ description:
 <PageDescription>
 
 The Create pattern offers simple (single step) and complex (multistep)
-variations in one of the following formats: Modal, Side panel, Narrow
-tearsheet, Wide tearsheet, and Full page.
+variations in one of the following formats: Modal, Side panel, Narrow tearsheet,
+Wide tearsheet, and Full page.
 
 </PageDescription>
 
@@ -283,7 +282,7 @@ respectively.
   alt="Wide tearsheet animated Create flow"
   title="Wide tearsheet animated Create flow"
   style="padding:3rem; background-color:#e0e0e0"
-></img>
+/>
 
 <Caption>Animated illustration of the Create flow in a Wide tearsheet</Caption> 
 </Column>
@@ -294,8 +293,6 @@ on a single scrolling page with anchor links. Toggling to "Show all available
 options" will replace the progress indicator with the In-page navigation anchor
 links. Depending on your use case, you may choose to persist the toggle to show
 all options for a particular Create flow if it will enhance the user experience.
-
-
 
 <Row>
 <Column colLg={8}>
@@ -318,13 +315,13 @@ all options for a particular Create flow if it will enhance the user experience.
 
 <Row>
 <Column colLg={8}>
-  
+
 <img
   src="/images/WideTearsheetShowAllOptionsAnimated.gif"
   alt="Wide tearsheet animated options toggle"
   title="Wide tearsheet animated options toggle"
-  style="padding:3rem; background-color:#e0e0e0"
-></img>
+  style="padding:3rem; background-color:#e0e0e0;"
+/>
 
 <Caption>Animated illustration of the "Show all available options" toggle behavior</Caption>
 </Column>
