docs: capitalization and pronoun section edits

--- a/src/pages/guidelines/content/writing-style.mdx
+++ b/src/pages/guidelines/content/writing-style.mdx
@@ -79,56 +79,6 @@ Recognition, and IBM Cloud are either products or services.
   />
 </DoDontRow>
 
-### Referring to UI elements
-
-When writing about a UI element, use the same capitalization as used in the UI.
-For example, if an input field is labeled “Name” then you refer to this as the
-Name input field. Similarly, if a drop-down menu has the label “Country” next to
-it, then it is correct to refer to the Country drop-down menu. Where a product
-page is titled “My network,” you refer to this in writing as follows: “Enter
-your network information in the My network page.”
-
-<DoDontRow>
-  <DoDont
-    text="To enter network information, go to the My network page."
-    caption="How to refer to UI elements in text"
-    aspectRatio="1:1"
-  />
-  <DoDont
-    type="dont"
-    text="To enter network information, go to the My Network page."
-    aspectRatio="1:1"
-  />
-</DoDontRow>
-
-### When to use capital letters
-
-Capital letters are reserved for the following:
-
-- “Carbon” or the “Carbon Design System” (i.e. the name of IBM’s official design
-  system)
-- “IBM” or any other company or organization name
-- Any official, trademarked product or service (whether from IBM or not) -
-  unless they intentionally use a lowercase letter at the beginning, such as the
-  iPhone
-- Any initialisms (e.g. BBC, HTML, etc.) or acronyms (e.g. NASA, NATO, etc.)
-- Any people
-- Any country / place names
-- When referring to any UI labels that are themselves capitalized
-- When the word begins a sentence or phrase
-
-If it’s not in the list above, it should not be capitalized.
-
-Sometimes official company and product names use non-standard capitalization. If
-you refer to any of these, ensure you write them accurately. Here are some
-examples (all written correctly):
-
-- developerWorks
-- GitHub
-- iTunes
-- JavaScript
-- WebSphere
-
 ### Do not use title case capitalization
 
 **Title (or headline) case capitalization** is where the first letter of most
@@ -184,6 +134,56 @@ when the text is in all caps.
   <DoDont
     type="dont"
     text="GET STARTED WITH WATSON STUDIO TO BUILD, TEST, AND DEPLOY YOU OWN CUSTOM MODELS TO IOS."
+    aspectRatio="1:1"
+  />
+</DoDontRow>
+
+### When to use capital letters
+
+Capital letters are reserved for the following:
+
+- “Carbon” or the “Carbon Design System” (i.e. the name of IBM’s official design
+  system)
+- “IBM” or any other company or organization name
+- Any official, trademarked product or service (whether from IBM or not) -
+  unless they intentionally use a lowercase letter at the beginning, such as the
+  iPhone
+- Any initialisms (e.g. BBC, HTML, etc.) or acronyms (e.g. NASA, NATO, etc.)
+- Any people
+- Any country / place names
+- When referring to any UI labels that are themselves capitalized
+- When the word begins a sentence or phrase
+
+If it’s not in the list above, it should not be capitalized.
+
+Sometimes official company and product names use non-standard capitalization. If
+you refer to any of these, ensure you write them accurately. Here are some
+examples (all written correctly):
+
+- developerWorks
+- GitHub
+- iTunes
+- JavaScript
+- WebSphere
+
+### How to refer to UI elements
+
+When writing about a UI element, use the same capitalization as used in the UI.
+For example, if an input field is labeled “Name” then you refer to this as the
+Name input field. Similarly, if a drop-down menu has the label “Country” next to
+it, then it is correct to refer to the Country drop-down menu. Where a product
+page is titled “My network”, you refer to this in writing as follows: “Enter
+your network information in the My network page”.
+
+<DoDontRow>
+  <DoDont
+    text="To enter network information, go to the My network page."
+    caption="How to refer to UI elements in text"
+    aspectRatio="1:1"
+  />
+  <DoDont
+    type="dont"
+    text="To enter network information, go to the My Network page."
     aspectRatio="1:1"
   />
 </DoDontRow>
@@ -427,32 +427,47 @@ the inclusiveness of our offerings:
 Other considerations apply for inclusive writing, including to avoid gender
 bias. As an example, do not assume that the subject of a sentence is male if the
 context might refer to any gender. Thus, instead of using "man hours", use
-"labor hours" or "person hours". Sometimes, you can rewrite a sentence to use
-the second person ("you"). For example, instead of writing "The user can now
-move his cursor in four directions", write "You can now move your cursor in four
-directions". It is also acceptable to use "they" to refer to a singular subject.
+"labor hours" or "person hours".
 
-If you're not sure about a particular word, you can search the
-[IBM Terminology database](http://ibm.biz/termsearch). And anyone at
-IBM can [submit a term for review](http://tlwi.w3-969.ibm.com/standards/terminology/feedbackform2.html).
+Sometimes, you can rewrite a sentence to use the second person ("you"). For
+example, instead of writing "The user can now move his cursor in four
+directions", write "You can now move your cursor in four directions". It is also
+acceptable to use "they" to refer to a singular subject.
+
+IBMers who are unsure about a particular word, can search the
+[IBM Terminology database](http://ibm.biz/termsearch), and can
+also [submit a term for review](http://tlwi.w3-969.ibm.com/standards/terminology/feedbackform2.html).
 
 For more information about this important work, see
 the [Inclusive IT Terminology](https://w3.ibm.com/w3publisher/inclusive-it-terminology/take-action) site.
 
 ## Pronouns
 
-Engage your readers by using second person (you, your) where appropriate. Avoid
-the first person unless you have a compelling reason to use it. First person (I,
-we, our) focuses on the writer rather than the audience, which is rarely
-appropriate in UI or technical contexts.
+Use the second person (you, your) as often as possible.
 
-One exception to this is in the case of possessive adjectives in the UI. You can
-use first person in headings or labels that are very specific to the user or
-customer data, for example “My account” or “My usage.” However, in explanatory
-text for the heading or label, switch to second person. For example, “Your usage
-is calculated from the 1st day of the month.”
+<DoDontRow>
+  <DoDont
+    text="You can customize the access role for this connection."
+    caption="Second person is friendlier and more engaging."
+    aspectRatio="1:1"
+  />
+  <DoDont
+    text="Try adjusting your search or filter options to find what you're looking for."
+    aspectRatio="1:1"
+  />
+</DoDontRow>
 
-Where appropriate, use first person ("we", "our") to refer to IBM.
+You can use first person in headings or labels that are very specific to the
+user or customer data, for example “My account” or “My usage.” However, in
+explanatory text for the heading or label, switch to second person. For example,
+“Your usage is calculated from the first day of the month.”
+
+Where appropriate, use first person (we, our) to refer to IBM. For example, in
+requests for personal information, such as name and email address, where the
+user will benefit from knowing why IBM is asking for this information. Example:
+“Why do we need your email address?”
+
+Avoid third-person pronouns that are gender specific.
 
 For more detailed guidance about pronouns, refer to the
 [Pronouns](https://www-03preprod.ibm.com/support/knowledgecenter/ibm_style/pronouns.html)
