docs: removing latin references, i.e. and e.g.

--- a/src/pages/guidelines/content/writing-style.mdx
+++ b/src/pages/guidelines/content/writing-style.mdx
@@ -142,13 +142,13 @@ when the text is in all caps.
 
 Capital letters are reserved for the following:
 
-- “Carbon” or the “Carbon Design System” (i.e. the name of IBM’s official design
+- “Carbon” or the “Carbon Design System” (the name of IBM’s official design
   system)
 - “IBM” or any other company or organization name
 - Any official, trademarked product or service (whether from IBM or not) -
   unless they intentionally use a lowercase letter at the beginning, such as the
   iPhone
-- Any initialisms (e.g. BBC, HTML, etc.) or acronyms (e.g. NASA, NATO, etc.)
+- Any initialisms (for example, BBC, HTML) or acronyms (for example, NASA, NATO)
 - Any people
 - Any country / place names
 - When referring to any UI labels that are themselves capitalized
