Removed extra margin from gifs

--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -277,12 +277,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-<img
-  src="/images/WideTearsheetAnimated.gif"
-  alt="Wide tearsheet animated Create flow"
-  title="Wide tearsheet animated Create flow"
-  style="padding:3rem; background-color:#e0e0e0"
-/>
+![Wide tearsheet animated Create flow](images/WideTearsheetAnimated.gif)
 
 <Caption>Animated illustration of the Create flow in a Wide tearsheet</Caption> 
 </Column>
@@ -316,12 +311,7 @@ all options for a particular Create flow if it will enhance the user experience.
 <Row>
 <Column colLg={8}>
 
-<img
-  src="/images/WideTearsheetShowAllOptionsAnimated.gif"
-  alt="Wide tearsheet animated options toggle"
-  title="Wide tearsheet animated options toggle"
-  style="padding:3rem; background-color:#e0e0e0;"
-/>
+![Wide tearsheet animated options toggle](images/WideTearsheetShowAllOptionsAnimated.gif)
 
 <Caption>Animated illustration of the "Show all available options" toggle behavior</Caption>
 </Column>
