--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -150,3 +150,70 @@ A notification can be used to alert the user that an export has been successful.
 
 </Column>
 </Row>
+
+## Accessibility
+
+Adhere to
+[Carbon's modal guidelines](https://www.carbondesignsystem.com/components/modal/accessibility).
+
+### Trigger
+
+<Row>
+<Column colLg={8}>
+
+![Non-exhaustive examples of buttons that launch an Export modal](images/ButtonInteractions.png)
+
+<Caption>Non-exhaustive examples of buttons that launch an Export modal</Caption>
+</Column>
+</Row>
+
+1. The user navigates to the Export button using the tab key. If Export is
+   launched from an overflow menu, the user may navigate to Export within the
+   overflow menu using the up/down arrow keys.
+2. The focus state is applied to the button/menu item.
+3. The user clicks "enter" to launch the Export modal.
+
+### Focus
+
+When the modal opens, focus is set depending on whether sensible default choices
+are defined or not.
+
+<Row>
+<Column colLg={8}>
+
+![Modal focus order](images/ModalInteractions.png)
+
+</Column>
+</Row>
+
+#### If the user must complete fields before the export can be executed:
+
+1. On opening the modal, the focus is applied to the first field that accepts
+   user input.
+2. On `tab`, progress through any further fields that accept user input.
+3. On `tab`, apply focus to "Export".
+4. On `tab`, apply focus to "Cancel".
+
+#### If a sensible default value is selected or input for the user (the user is not required to complete any fields in order to export):
+
+1. On opening the modal, set the focus to the "Export" button.
+2. On `tab`, apply focus to "Cancel".
+3. On `tab`, apply focus to the first field that accepts user input. Follow
+   accessibiltiy guidance for the interaction type of this field (i.e.
+   [Radio button](https://www.carbondesignsystem.com/components/radio-button/accessibility#how-it-works)
+   or
+   [Text input](https://www.carbondesignsystem.com/components/text-input/accessibility#how-it-works))
+4. On `tab`, progress through any further fields that accept user input.
+
+### Feedback Interactions
+
+Where passive modals are used to alert the user of success or failure, open the
+modal with focus applied to the "Close" icon.
+
+<Row>
+<Column colLg={8}>
+
+![Focus on the close icon when using passive modals](images/FailureInteractions.png)
+
+</Column>
+</Row>
