Added anchor link

--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -34,6 +34,7 @@ Most of this pattern is applicable to both exporting and downloading.
 <AnchorLink>Intuitive default name</AnchorLink>
 <AnchorLink>Editable name</AnchorLink>
 <AnchorLink small>Optional extras</AnchorLink>
+<AnchorLink small>Accessibility</AnchorLink>
 
 </AnchorLinks>
 
