docs: content guidelines heading fix

--- a/src/pages/guidelines/content/action-labels.mdx
+++ b/src/pages/guidelines/content/action-labels.mdx
@@ -2,7 +2,7 @@
 label:
   Content design can make or break an online experience. Always strive for
   writing that is clear, concise, and on-brand.
-title: Action labels
+title: Content
 description:
   Users rely on consistent labels for common actions to predict how to interact
   with an interface. This list includes the common UI terms and recommended
