--- a/src/pages/guidelines/content/overview.mdx
+++ b/src/pages/guidelines/content/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Content
 description:
   Well-designed content empowers people to use our offerings with ease. Words
   form the conversation a user has with a product, working with the visual
