--- a/src/pages/guidelines/content/writing-style.mdx
+++ b/src/pages/guidelines/content/writing-style.mdx
@@ -1,5 +1,5 @@
 ---
-title: Writing style
+title: Content
 description:
   Writing should always be simple, clear, and easy to understand. Using everyday
   language keeps the tone friendly, human, and inviting. And choose short words
