--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -200,7 +200,7 @@ are defined or not.
 1. On opening the modal, set the focus to the "Export" button.
 2. On `tab`, apply focus to "Cancel".
 3. On `tab`, apply focus to the first field that accepts user input. Follow
-   accessibiltiy guidance for the interaction type of this field (i.e.
+   accessibility guidance for the interaction type of this field (i.e.
    [Radio button](https://www.carbondesignsystem.com/components/radio-button/accessibility#how-it-works)
    or
    [Text input](https://www.carbondesignsystem.com/components/text-input/accessibility#how-it-works))
