--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -134,6 +134,28 @@ your framework of choice.
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
+    subTitle="Carbon Storybook Theme Switcher"
+    href="https://www.npmjs.com/package/@carbon/storybook-addon-theme"
+    >
+
+![](/images/storybook-addon-carbon-themes.png)
+
+  </ResourceCard>
+</Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Stylelint plugin Carbon tokens"
+    href="https://www.npmjs.com/package/stylelint-plugin-carbon-tokens"
+    >
+
+![](/images/stylelint-plugin-carbon-tokens.png)
+
+  </ResourceCard>
+</Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
     subTitle="Color contrast checker"
     href="https://marijohannessen.github.io/color-contrast-checker/"
     >
