chore: change icons on dev tool to npm logo

--- a/src/pages/developing/dev-resources/index.mdx
+++ b/src/pages/developing/dev-resources/index.mdx
@@ -138,7 +138,7 @@ your framework of choice.
     href="https://www.npmjs.com/package/@carbon/storybook-addon-theme"
     >
 
-![](/images/storybook-addon-carbon-themes.png)
+<MdxIcon name="npm" />
 
   </ResourceCard>
 </Column>
@@ -149,7 +149,7 @@ your framework of choice.
     href="https://www.npmjs.com/package/stylelint-plugin-carbon-tokens"
     >
 
-![](/images/stylelint-plugin-carbon-tokens.png)
+<MdxIcon name="npm" />
 
   </ResourceCard>
 </Column>
