fix(a11y): add color contrast tool link back in

--- a/src/pages/guidelines/accessibility/color.mdx
+++ b/src/pages/guidelines/accessibility/color.mdx
@@ -106,7 +106,7 @@ plugin.
 <Column colMd={4} colLg={4} noGutterSm>
 <ResourceCard
     subTitle="Color contrast tool"
-    href=""
+    href="https://marijohannessen.github.io/color-contrast-checker/"
      >
 
 ![color contrast icon](images/color-contrast-icon.png)
