--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -38,7 +38,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Overflow menu text should be set in set in sentence case with the first letter
+Overflow menu text should be set in sentence case with the first letter
 of the first word capitalized.
 
 | Property                          | Font-size (px/rem) | Font-weight   | Type token       |
