--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -366,8 +366,7 @@ vary based on your specific use case.
 
 Users trigger a dropdown menu to open by clicking the chevron icon or clicking
 anywhere within the field. Users can close the menu by clicking the chevron icon
-or clicking outside of the menu. _Note: You can only open a combo box by
-clicking the chevron icon or by typing in the field._
+or clicking outside of the menu.
 
 <Row>
 <Column colLg={8}>
@@ -593,8 +592,7 @@ typically used when there are a large amount of options to choose from.
 </Row>
 
 - The menu opens by clicking anywhere in the field and you can start typing to
-  sort through the list of options. The options that start to match your entry
-  remain in the list while other existing options are temporarily removed.
+  sort through the list of options. The option that best matches the typed characters is highlighted.
 - After typing text in the field, the close (x) icon appears to the right of the
   text in the field. This clears any text that’s been entered in the field.
 
