feat: add motion dev handoff

--- a/src/pages/guidelines/motion/overview.mdx
+++ b/src/pages/guidelines/motion/overview.mdx
@@ -347,6 +347,13 @@ transitions. Consider simplified or reduced motion designs for mobile and
 tablet. Make sure there is always a way to communicate similar messages
 statically.
 
+### Translating for developers
+
+The main specifications developers need to code animation are the element,
+transformation (move, scale, fade, rotate), duration, delay and motion curve. We
+suggest sending an animated prototype or video/gif as well as a detailed motion
+specifications chart for your developer.
+
 ## Resources
 
 <Row className="resource-card-group">
@@ -357,9 +364,9 @@ statically.
     >
 
 <MdxIcon name="bee" />
-
   </ResourceCard>
   </Column>
+
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Elements package: Motion"
@@ -367,7 +374,17 @@ statically.
     >
 
 <MdxIcon name="github" />
-
   </ResourceCard>
   </Column>
+
+  <Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      subTitle="Motion Developer Translation"
+      href="sketch://add-library/cloud/EXAMPLE"
+    >
+
+<MdxIcon name="sketch" />
+  </ResourceCard>
+  </Column>
+
 </Row>
