--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -159,14 +159,7 @@ Adhere to
 
 ### Trigger
 
-<Row>
-<Column colLg={8}>
-
-![Non-exhaustive examples of buttons that launch an Export modal](images/ButtonInteractions.png)
-
-<Caption>Non-exhaustive examples of buttons that launch an Export modal</Caption>
-</Column>
-</Row>
+Most often, the export modal is triggered by clicking an "export" button.
 
 1. The user navigates to the Export button using the tab key. If Export is
    launched from an overflow menu, the user may navigate to Export within the
@@ -179,14 +172,6 @@ Adhere to
 When the modal opens, focus is set depending on whether sensible default choices
 are defined or not.
 
-<Row>
-<Column colLg={8}>
-
-![Modal focus order](images/ModalInteractions.png)
-
-</Column>
-</Row>
-
 #### If the user must complete fields before the export can be executed:
 
 1. On opening the modal, the focus is applied to the first field that accepts
@@ -195,7 +180,7 @@ are defined or not.
 3. On `tab`, apply focus to "Export".
 4. On `tab`, apply focus to "Cancel".
 
-#### If a sensible default value is selected or input for the user (the user is not required to complete any fields in order to export):
+#### If a sensible default value is provided:
 
 1. On opening the modal, set the focus to the "Export" button.
 2. On `tab`, apply focus to "Cancel".
@@ -210,11 +195,3 @@ are defined or not.
 
 Where passive modals are used to alert the user of success or failure, open the
 modal with focus applied to the "Close" icon.
-
-<Row>
-<Column colLg={8}>
-
-![Focus on the close icon when using passive modals](images/FailureInteractions.png)
-
-</Column>
-</Row>
